Fixed side pane content on results page not aligning correctly

--- a/searx-instance/theme/src/sass/light/search.sass
+++ b/searx-instance/theme/src/sass/light/search.sass
@@ -21,14 +21,12 @@ main#search_content
 
   #section__sidebar__unresponsive_engines
     grid-column: 2/3
-    grid-row: 2/3
     @include mobile()
       display: none
 
 
   #section__sidebar__infoboxes
     grid-column: 2/3
-    grid-row: 1/2
     @include mobile()
       grid-column: 1/2
       grid-row: 1/2
@@ -36,14 +34,12 @@ main#search_content
 
   #section__sidebar__suggestions
     grid-column: 2/3
-    grid-row: 3/4
     @include mobile()
       display: none
 
 
   #section__sidebar__link
     grid-column: 2/3
-    grid-row: 4/5
     @include mobile()
       width: 100%
       display: flex
@@ -54,7 +50,6 @@ main#search_content
 
   #section__sidebar__result_count
     grid-column: 2/3
-    grid-row: 5/6
     @include mobile()
       grid-column: 1/2
       grid-row: 5/6
